fix MagicPortal not closing on mobile

--- a/src/styles/components/MagicPortal.scss
+++ b/src/styles/components/MagicPortal.scss
@@ -8,10 +8,10 @@
 	max-height: min(480px, 100vh - 16px);
 	z-index: 998;
 	inset: 0;
-	pointer-events: none;
 
-	.hide {
+	&.hide {
 		display: none;
+		pointer-events: none;
 	}
 
 	@include for-size(700px) {
